# siglume-direct-request-payment

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATING_FROM_0.5.0_REFUND_PREVIEW.md  README.md  RELEASING.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-npm.yml  release-pypi.yml
docs/: announcement-ja.md  api-reference.md  api-stability.md  buyer-onboarding.md  ga-evidence.md  merchant-quickstart.md  metered-statements.md  payment-lifecycle.md  pricing.md  quickstart-10-minutes.md  responsibility-boundary.md  sandbox.md  security.md  status-and-service-objectives.md  status-and-sla.md  troubleshooting.md
docs/concepts/: sdrp-vs-x402.md
examples/: express-checkout.ts  setup-merchant.ts
examples/hosted-checkout-python/: README.md  app.py  order_store.py  pyproject.toml
examples/hosted-checkout-typescript/: .env.example  README.md  package.json
examples/hosted-checkout-typescript/src/: order-store.ts  server.ts
python_tests/: test_challenge.py  test_cli.py  test_client.py  test_fastapi_async_sqlalchemy_e2e.py  test_fastapi_sqlalchemy_e2e.py  test_webhooks.py
scripts/: check-docs.mjs  check-markdown-examples.mjs
src/: index.ts
src/siglume_direct_request_payment/: __init__.py  _cli.py  _client.py
src/siglume_direct_request_payment/templates/fastapi/: README.md  siglume_order_store_example.py  siglume_order_store_sqlalchemy.py  siglume_order_store_sqlalchemy_async.py  siglume_sdrp_routes.py
templates/express/: README.md  siglume-order-store.dynamodb.ts  siglume-order-store.example.ts  siglume-order-store.firestore.ts  siglume-order-store.mongodb.ts  siglume-order-store.sql.ts  siglume-sdrp-routes.ts
templates/fastapi/: README.md  siglume_order_store_example.py  siglume_order_store_sqlalchemy.py  siglume_order_store_sqlalchemy_async.py  siglume_sdrp_routes.py
test/: challenge.test.ts  client.test.ts  express-nosql-matrix.integration.test.ts  express-orm-matrix.integration.test.ts  express-template.e2e.test.ts  sandbox-cli.e2e.test.ts  webhooks.test.ts
test/prisma/: schema.prisma
