[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siglume-direct-request-payment"
version = "0.4.29"
description = "SDK for the Siglume Direct Request Payment SDRP payment protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27,<1"]
authors = [{name = "Siglume Contributors"}]
keywords = ["siglume", "sdrp", "direct-request-payment", "payment", "micropayments", "metered-billing", "jpyc", "usdc", "checkout", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/taihei-05/siglume-direct-request-payment"
Documentation = "https://github.com/taihei-05/siglume-direct-request-payment#readme"
Issues = "https://github.com/taihei-05/siglume-direct-request-payment/issues"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.21", "fastapi>=0.115,<1", "SQLAlchemy>=2,<3", "aiosqlite>=0.20"]

[project.scripts]
siglume-check = "siglume_direct_request_payment._cli:main"
siglume-sdrp = "siglume_direct_request_payment._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siglume_direct_request_payment = ["py.typed", "templates/fastapi/*.py", "templates/fastapi/*.md"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
